objects/UIP_Element__c.object
<CustomObject><fields>
        <fullName>Academic_Achievement_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Academic Achievement (Status)</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Academic_Growth_Gaps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Academic Growth Gaps</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Academic_Growth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Academic Growth</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Challenge_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Challenge 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Challenge</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>UIP_Element__c</referenceTo>
        <relationshipLabel>Root Cause</relationshipLabel>
        <relationshipName>Root_Cause</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Challenge_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Challenge 2</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Challenge</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>UIP_Element__c</referenceTo>
        <relationshipLabel>Root Cause 2</relationshipLabel>
        <relationshipName>Root_Cause_2</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Challenge_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Challenge 3</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Challenge</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>UIP_Element__c</referenceTo>
        <relationshipLabel>UIP Elements (Challenge 3)</relationshipLabel>
        <relationshipName>UIP_Elements3</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Colorado_Graduation_Pathways_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Action Planning Form</description>
        <label>Colorado Graduation Pathways Program</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Diagnostic_Review_Grant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diagnostic Review Grant</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Evidence_Based_Interventions__c</fullName>
        <label>Evidence Based Interventions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Gifted_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gifted Program</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Major_Improvement_Strategy_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Major Improvement Strategy 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Major Improvement Strategy</value>
            </filterItems>
            <filterItems>
                <field>UIP_Element__c.UIP__c</field>
                <operation>equals</operation>
                <valueField>$Source.UIP__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UIP_Element__c</referenceTo>
        <relationshipLabel>Challenge 1 (Major Improvement Strategy)</relationshipLabel>
        <relationshipName>Challenge_MIS_1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Major_Improvement_Strategy_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Major Improvement Strategy 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Major Improvement Strategy</value>
            </filterItems>
            <filterItems>
                <field>UIP_Element__c.UIP__c</field>
                <operation>equals</operation>
                <valueField>$Source.UIP__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UIP_Element__c</referenceTo>
        <relationshipLabel>Challenge 2 (Major Improvement Strategy)</relationshipLabel>
        <relationshipName>Challenge_MIS_2</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Major_Improvement_Strategy_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Major Improvement Strategy 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Major Improvement Strategy</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>UIP_Element__c</referenceTo>
        <relationshipLabel>UIP Elements (Major Improvement Strategy 3)</relationshipLabel>
        <relationshipName>UIP_Elements6</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Other_Description__c</fullName>
        <description>For Action Planning Form</description>
        <label>Other (Description)</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Action Planning Form</description>
        <label>Other</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Postsecondary_Workforce_Readiness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Postsecondary &amp; Workforce Readiness</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Public_Facing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Facing</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Root_Cause_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Cause 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Root Cause</value>
            </filterItems>
            <filterItems>
                <field>UIP_Element__c.UIP__c</field>
                <operation>equals</operation>
                <valueField>$Source.UIP__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>UIP_Element__c</referenceTo>
        <relationshipLabel>Challenge</relationshipLabel>
        <relationshipName>Challenge</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Root_Cause_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Cause 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Root Cause</value>
            </filterItems>
            <filterItems>
                <field>UIP_Element__c.UIP__c</field>
                <operation>equals</operation>
                <valueField>$Source.UIP__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>UIP_Element__c</referenceTo>
        <relationshipLabel>Challenge 2</relationshipLabel>
        <relationshipName>Challenge_2</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Root_Cause_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Root Cause 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>UIP_Element__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Root Cause</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>UIP_Element__c</referenceTo>
        <relationshipLabel>UIP Elements (Root Cause 3)</relationshipLabel>
        <relationshipName>UIP_Elements1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>School_Improvement_Support_Grant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>School Improvement Support Grant</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>State_Accreditation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Action Planning Form</description>
        <label>State Accreditation</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Student_Graduation_and_Completion_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(Designated Graduation District)</description>
        <inlineHelpText>(Designated Graduation District)</inlineHelpText>
        <label>Student Graduation and Completion Plan</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Tiered_Intervention_Grant_TIG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Action Planning Form</description>
        <label>Tiered Intervention Grant (TIG)</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Title_IA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title IA</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Title_IIA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title IIA</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Title_III__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title III</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Title_I_Focus_School__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Action Planning Form</description>
        <label>Title I Focus School</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>UIP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIP</label>
        <referenceTo>UIP__c</referenceTo>
        <relationshipLabel>UIP Elements</relationshipLabel>
        <relationshipName>UIP_Elements</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>VIP_Date_Time_Submitted__c</fullName>
        <label>VIP Submitted</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>VIP_Foreign_Language__c</fullName>
        <label>VIP Foreign Language</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>VIP_Template_Status__c</fullName>
        <label>VIP Template Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>VIP_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VIP Form Template</label>
        <referenceTo>VIPForm__VIP_Template__c</referenceTo>
        <relationshipLabel>UIP Elements</relationshipLabel>
        <relationshipName>UIP_Elements</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ZPIF_UIP_Identidier__c</fullName>
        <label>ZPIF UIP Identidier</label>
        <length>50</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>UIP Element</label><nameField>
        <label>UIP Element Name</label>
        <type>Text</type>
    </nameField><pluralLabel>UIP Elements</pluralLabel><sharingModel>ReadWrite</sharingModel><startsWith>Vowel</startsWith><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UIP__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Challenge_1__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><recordTypes>
        <fullName>Challenge</fullName>
        <active>true</active>
        <description>Priority Performance Challenge</description>
        <label>Challenge</label>
    </recordTypes><recordTypes>
        <fullName>Major_Improvement_Strategy</fullName>
        <active>true</active>
        <label>Major Improvement Strategy</label>
    </recordTypes><recordTypes>
        <fullName>Root_Cause</fullName>
        <active>true</active>
        <label>Root Cause</label>
    </recordTypes></CustomObject>